# voxircle

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html  sw.js  voxircle.js
.github/workflows/: pages-build-deployment.yml  rust.yml
src/: app.rs  data_structures.rs  formatting.rs  main.rs
src/app/: colors.rs  control.rs  formatting.rs  gen_config.rs  gen_output.rs  lua_field.rs  param_config.rs  param_field.rs  plotting.rs  rhai_field.rs  sampling.rs  shortcuts.rs  ui_generation.rs  ui_layer_navigation.rs  ui_options.rs  ui_sampling.rs  ui_viewport.rs  ui_viewport_options.rs  update_logic.rs  update_metrics.rs  view.rs
src/app/data_structures/: blocks.rs  gen_config.rs  layer_config.rs  mod.rs  sampled_parameters.rs  slice_parameters.rs  sparse_blocks.rs  square.rs  squircle_params.rs  symmetry_type.rs  zvec.rs
src/app/generation/: any_shape.rs  centerpoint.rs  conservative.rs  contained.rs  diamond.rs  empty.rs  line.rs  mod.rs  percentage.rs  shape.rs  shape_type.rs  square.rs  squircle.rs
src/app/helpers/: blocks.rs  boundary_3d.rs  circle_geometry.rs  convex_hull.rs  exact_squircle_bounds.rs  gen_config.rs  geometry.rs  lin_alg.rs  linear_algebra.rs  linear_geometry.rs  mod.rs  optimization.rs  plotting.rs  square.rs
src/app/math/: circle_geometry.rs  convex_hull.rs  exact_squircle_bounds.rs  linear_algebra.rs  linear_geometry.rs  mod.rs  sparse_graph.rs  square.rs  square_max.rs
src/app/metrics/: boundary_3d.rs  convex_hull.rs  mod.rs  sparse_blocks.rs  symmetry_type.rs
src/app/sampling/: layer_parameters.rs  mod.rs  sampled_parameters.rs
(+21 files in other folders)
