[package]
name = "voxircle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.0" }
egui_extras = { version = "0.26.0", features = ["image"] }
egui_plot = "0.26.0"
image = { version = "0.24.8" }
exitcode = "1.1.2"
itertools = "0.13.0"